# riverbank

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.adoc  api-description.yml  config.yml  docker-compose.yml  dredd.yml  sqlx-data.json
.github/workflows/: release.yml  rust.yml
apidocs/: api-description.json  index.html
migrations/: 20210530213127_simple_tokens.sql  20210530215400_location_for_tables.sql  20210531181347_tokens-have-names.sql
scripts/: prepare-openapi-docs
seeds/: dev.sql
src/: config.rs  main.rs  models.rs  routes.rs  state.rs
src/routes/: admin.rs  mod.rs  v1.rs
views/: admin.hbs  index.hbs
